--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
 }
 
 /* common */
+
+body{font-family: 'Montserrat', sans-serif;}
+
 .container{
     width: 80%;
     margin: auto;
@@ -14,65 +17,85 @@
     margin-top: 25px;
 }
 
-header{
-    width: 100%;
-    background-color: #e579e6;
-    /* height: 150px; */
-}
-
 .clearfix::after{
     display: table;
     content:"";
     clear: both;
 }
 
-/* main */
+header, .section-1, .contenuto, .top, footer{width: 100%;}
+
+
+
+/* header */
+
+#logo{
+    width: 150px;
+    margin-bottom: 20px;
+}
+
+li{
+    display: inline-block;
+    margin-right: 10px;
+}
+
+li a{text-decoration: none;}
+
+
+
+/* main 
+
 .section-1{
-    width: 100%;
-    background-color: #e1d67a;
-    /* height: 500px; */    
+    position: relative;
+    background-image: url(../img/banner.jpg);
+    height: 600px;
+    background-size: cover;
+    border-radius: 10px;    
 }
 
-/* main section-2 */
-
-.contenuto{
-    width: 100%;
-    padding: 15px 0;
+.hero-text{
+    position: absolute;
+    bottom: 50px;
+    left: 30px;
+    width: 600px;
+    color: gray;
 }
 
-.top{
-    width: 100%;
-    background-color: #abcfe7;
-    /* height: 80px; */
+h1{
+    margin-bottom: 10px;
+    font-size: 30px;
 }
 
-.left-25, .center-50, .right-25{
-    float: left;
-    /* height: 600px; */
-    background-color: #abcfe7;
-}
+/* main section-2 
 
-.left-25, .right-25{
-    width: 25%;
-}
+.photo {width: 100%; height: 280px;}
+
+.contenuto p {color: gray;}
+
+.contenuto {padding: 15px 0;}
+
+.top { padding: 10px 0;}
+
+.left-25, .center-50, .right-25 {float: left;}
+
+.left-25, .right-25 {width: 25%;}
 
 .center-50{
     margin: 0 15px;
     width: calc(50% - 30px);
 }
 
+h3{
+    margin-bottom: 10px;
+}
+
 
 footer{
     margin-top: 10px;
-    width: 100%;
     background-color: #8801fe;
     /* height: 60px; */
 }
 
-
-
-/* da cancellare temporanei */
-.section-2{background-color: #0087ff;}
 
 
 
