--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h1{
     font-size: 30px;
 }
 
-/* main section-2 
+/* main section-2 */ 
 
 .photo {width: 100%; height: 280px;}
 
@@ -90,11 +90,10 @@ h3{
 }
 
 
-footer{
+/* footer{
     margin-top: 10px;
     background-color: #8801fe;
-    /* height: 60px; */
-}
+} */
 
 
 
