--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,11 @@ h1{
 
 /* main section-2 */ 
 
-.photo {width: 100%; height: 280px;}
-
+.photo {
+    width: 100%;
+    height: 280px;
+}
+    
 .contenuto p {color: gray;}
 
 .contenuto {padding: 15px 0;}
@@ -89,11 +92,20 @@ h3{
     margin-bottom: 10px;
 }
 
+/* footer */
 
-/* footer{
+footer{
     margin-top: 10px;
-    background-color: #8801fe;
-} */
+    text-align: center;
+    padding: 20px;
+}
+
+.heart{
+    font-size: 30px;
+    color: red;
+}
+
+
 
 
 
