--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body{font-family: 'Montserrat', sans-serif;}
     clear: both;
 }
 
-header, .section-1, .contenuto, .top, footer{width: 100%;}
+header, .section-1, .contenuto, .top, footer {width: 100%;}
 
 
 
@@ -39,7 +39,13 @@ li{
     margin-right: 10px;
 }
 
-li a{text-decoration: none;}
+li a{
+    text-decoration: none;
+    color: #909aa0;
+    font-weight: 700;
+}
+
+li a:hover{color: lightgray;}
 
 
 
@@ -50,7 +56,17 @@ li a{text-decoration: none;}
     background-image: url(../img/banner.jpg);
     height: 600px;
     background-size: cover;
-    border-radius: 10px;    
+    border-radius: 10px;
+    overflow: hidden;    
+}
+
+.overlay{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
 .hero-text{
@@ -58,7 +74,7 @@ li a{text-decoration: none;}
     bottom: 50px;
     left: 30px;
     width: 600px;
-    color: gray;
+    color: white;
 }
 
 h1{
@@ -71,15 +87,21 @@ h1{
 .photo {
     width: 100%;
     height: 280px;
+    object-fit: cover;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 5px 5px 5px silver;
 }
     
 .contenuto p {color: gray;}
 
 .contenuto {padding: 15px 0;}
 
-.top { padding: 10px 0;}
+.top {padding: 10px 0;}
 
-.left-25, .center-50, .right-25 {float: left;}
+.left-25, .center-50, .right-25 {
+    float: left;
+}
 
 .left-25, .right-25 {width: 25%;}
 
@@ -88,8 +110,17 @@ h1{
     width: calc(50% - 30px);
 }
 
+.text{
+    padding: 15px;
+}
+
 h3{
     margin-bottom: 10px;
+}
+
+hr{
+    width: 60%;
+    margin: auto;
 }
 
 /* footer */
